--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                             <span>why choose us</span>
                         </div>
                         <h2 class="wow fadeInUp" data-wow-delay=".3s">
-                            We turn your designing <br><span> into reality Now </span>
+                            We turn your dream <br><span> into reality Now </span>
                         </h2>
                     </div>
                     <p class="wow fadeInUp" data-wow-delay=".5s">
@@ -440,20 +440,20 @@
                 <img src="assets/img/bg-shape.png" alt="img">
             </div>
             <div class="container">
-                <div class="cta-counter-wrapper bg-cover" style="background-image: url('assets/img/bg-03.jpg');">
+                <div class="cta-counter-wrapper bg-cover" style="background-image: url('assets/img/bg-002.jpg');">
                     <div class="shape-img">
                         <img src="assets/img/counter-shape.png" alt="img">
                     </div>
                     <div class="counter-box-area">
                         <div class="counter-text wow fadeInUp" data-wow-delay=".3s">
                             <h2>
-                                <span class="count">1500</span>+
+                                <span class="count">4000</span>+
                             </h2>
                             <p>Projects Done</p>
                         </div>
                         <div class="counter-text wow fadeInUp" data-wow-delay=".5s">
                             <h2>
-                                <span class="count">1000</span>+
+                                <span class="count">2500</span>+
                             </h2>
                             <p>Happy Clients</p>
                         </div>
@@ -568,7 +568,7 @@
         </section>
 
         <!-- Cta Marketing Section Start -->
-        <section class="cta-marketing section-padding pt-0">
+        <!-- <section class="cta-marketing section-padding pt-0">
             <div class="shape-img float-bob-y">
                 <img src="assets/img/service/rocket-shape.png" alt="img">
             </div>
@@ -577,10 +577,10 @@
                     <div class="content">
                         <div class="section-title">
                             <div class="sub-title bg-color-3 wow fadeInUp">
-                                <span>Free Marketing</span>
+                                <span>Suscribe our Newsletter</span>
                             </div>
                             <h2 class="text-white wow fadeInUp" data-wow-delay=".3s">
-                                Free digital marketing
+                                Conect with Us
                             </h2>
                         </div>
                         <ul class="list mt-3 mt-md-0 wow fadeInUp" data-wow-delay=".5s">
@@ -588,13 +588,13 @@
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
                                     <path d="M7.38397 14.1797C7.34153 14.1797 7.29954 14.171 7.26066 14.1539C7.22178 14.1369 7.18683 14.1121 7.15803 14.0809L1.06612 7.49119C1.02551 7.44726 0.99859 7.39244 0.988651 7.33344C0.978712 7.27445 0.986187 7.21384 1.01016 7.15902C1.03414 7.10421 1.07357 7.05758 1.12364 7.02483C1.17371 6.99208 1.23223 6.97464 1.29206 6.97464H4.22437C4.26839 6.97464 4.31191 6.98409 4.35197 7.00234C4.39204 7.0206 4.42772 7.04723 4.45661 7.08045L6.49255 9.42273C6.71258 8.95239 7.13852 8.16925 7.88597 7.21497C8.99095 5.8042 11.0463 3.7294 14.5627 1.85642C14.6307 1.82023 14.7097 1.81083 14.7843 1.83009C14.8588 1.84936 14.9235 1.89587 14.9654 1.96046C15.0073 2.02504 15.0235 2.103 15.0108 2.17894C14.998 2.25488 14.9573 2.32328 14.8966 2.37064C14.8831 2.38113 13.5273 3.44882 11.967 5.40448C10.5309 7.20417 8.62191 10.1469 7.68255 13.946C7.66605 14.0128 7.62767 14.0721 7.57354 14.1144C7.5194 14.1568 7.45263 14.1799 7.38388 14.1799L7.38397 14.1797Z" fill="white"/>
                                 </svg>
-                                Digital marketing
+                                Web Development
                             </li>
                             <li>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16" fill="none">
                                     <path d="M7.38397 14.1797C7.34153 14.1797 7.29954 14.171 7.26066 14.1539C7.22178 14.1369 7.18683 14.1121 7.15803 14.0809L1.06612 7.49119C1.02551 7.44726 0.99859 7.39244 0.988651 7.33344C0.978712 7.27445 0.986187 7.21384 1.01016 7.15902C1.03414 7.10421 1.07357 7.05758 1.12364 7.02483C1.17371 6.99208 1.23223 6.97464 1.29206 6.97464H4.22437C4.26839 6.97464 4.31191 6.98409 4.35197 7.00234C4.39204 7.0206 4.42772 7.04723 4.45661 7.08045L6.49255 9.42273C6.71258 8.95239 7.13852 8.16925 7.88597 7.21497C8.99095 5.8042 11.0463 3.7294 14.5627 1.85642C14.6307 1.82023 14.7097 1.81083 14.7843 1.83009C14.8588 1.84936 14.9235 1.89587 14.9654 1.96046C15.0073 2.02504 15.0235 2.103 15.0108 2.17894C14.998 2.25488 14.9573 2.32328 14.8966 2.37064C14.8831 2.38113 13.5273 3.44882 11.967 5.40448C10.5309 7.20417 8.62191 10.1469 7.68255 13.946C7.66605 14.0128 7.62767 14.0721 7.57354 14.1144C7.5194 14.1568 7.45263 14.1799 7.38388 14.1799L7.38397 14.1797Z" fill="white"/>
                                 </svg>
-                                ECO optimization
+                                SEO Optimizations
                             </li>
                         </ul>
                     </div>
@@ -609,10 +609,10 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         
         <!-- About Section Start -->
-        <section class="about-section-2 fix section-padding pt-0">
+        <section class="about-section-2 fix section-padding pb-0">
             <div class="bg-shape">
                 <img src="assets/img/about/bg-shape-2.png" alt="img">
             </div>
@@ -783,28 +783,6 @@
                 </div>
             </div>
         </section>
-
-        <!-- Cta Contact Section Start -->
-        <!-- <section class="cta-contact-section fix section-padding">
-            <div class="container">
-                <div class="cta-contact-wrapper bg-cover" style="background-image: url('assets/img/cta-contact-bg.jpg');">
-                    <div class="cta-image wow img-custom-anim-left" data-wow-duration="1.5s" data-wow-delay="0.3s">
-                        <img src="assets/img/contact-img.png" alt="img">
-                    </div>
-                    <div class="section-title mb-0">
-                        <div class="sub-title bg-color-3 wow fadeInUp">
-                            <span>Contact US</span>
-                        </div>
-                        <h2 class="text-white wow fadeInUp" data-wow-delay=".3s">
-                            24/7 Expert Hosting Support <br> Our Customers Love
-                        </h2>
-                    </div>
-                    <div class="main-button wow fadeInUp" data-wow-delay=".5s">
-                        <a href="contact.html"> <span class="theme-btn">Talk to a Specialist </span><span class="arrow-btn"><i class="fa-regular fa-arrow-up-right"></i></span></a>
-                    </div>
-                </div>
-            </div>
-        </section> -->
 
         <!-- Testimonial Section Start -->
         <section class="testimonial-section fix section-padding bg-cover" style="background-image: url('assets/img/testimonial/testimonial-bg.jpg');">
