--- a/case/case-1.html
+++ b/case/case-1.html
@@ -9,27 +9,27 @@
         <!-- ======== Page title ============ -->
         <title>E-commerce Project - WORSHIPBD</title>
         <!--<< Favcion >>-->
-        <link rel="shortcut icon" href="../../assets/img/favicon.png">
+        <link rel="shortcut icon" href="../assets/img/favicon.png">
         <!--<< Bootstrap min.css >>-->
-        <link rel="stylesheet" href="../../assets/css/bootstrap.min.css">
+        <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
         <!--<< All Min Css >>-->
-        <link rel="stylesheet" href="../../assets/css/all.min.css">
+        <link rel="stylesheet" href="../assets/css/all.min.css">
         <!--<< Animate.css >>-->
-        <link rel="stylesheet" href="../../assets/css/animate.css">
+        <link rel="stylesheet" href="../assets/css/animate.css">
         <!--<< Icomoon.css >>-->
-        <link rel="stylesheet" href="../../assets/css/icomoon.css">
+        <link rel="stylesheet" href="../assets/css/icomoon.css">
         <!--<< Magnific Popup.css >>-->
-        <link rel="stylesheet" href="../../assets/css/magnific-popup.css">
+        <link rel="stylesheet" href="../assets/css/magnific-popup.css">
         <!--<< MeanMenu.css >>-->
-        <link rel="stylesheet" href="../../assets/css/meanmenu.css">
+        <link rel="stylesheet" href="../assets/css/meanmenu.css">
         <!--<< Swiper Bundle.css >>-->
-        <link rel="stylesheet" href="../../assets/css/swiper-bundle.min.css">
+        <link rel="stylesheet" href="../assets/css/swiper-bundle.min.css">
         <!--<< Nice Select.css >>-->
-        <link rel="stylesheet" href="../../assets/css/nice-select.css">
+        <link rel="stylesheet" href="../assets/css/nice-select.css">
         <!--<< Color.css >>-->
-        <link rel="stylesheet" href="../../assets/css/color.css">
+        <link rel="stylesheet" href="../assets/css/color.css">
         <!--<< Main.css >>-->
-        <link rel="stylesheet" href="../../assets/css/main.css">
+        <link rel="stylesheet" href="../assets/css/main.css">
     </head>
     <body >
 
@@ -229,7 +229,7 @@
         </header>
 
         <!-- Breadcrumb Section Start -->
-        <div class="breadcrumb-wrapper bg-cover" style="background-image: url('../../assets/img/breadcrumb.jpg');">
+        <div class="breadcrumb-wrapper bg-cover" style="background-image: url('../assets/img/breadcrumb.jpg');">
             <div class="left-shape">
                 <img src="../../assets/img/breadcrumb-shape.png" alt="img">
             </div>
@@ -608,28 +608,28 @@
         </section>
         
         <!--<< All JS Plugins >>-->
-        <script src="../../assets/js/jquery-3.7.1.min.js"></script>
+        <script src="../assets/js/jquery-3.7.1.min.js"></script>
         <!--<< Viewport Js >>-->
-        <script src="../../assets/js/viewport.jquery.js"></script>
+        <script src="../assets/js/viewport.jquery.js"></script>
         <!--<< Bootstrap Js >>-->
-        <script src="../../assets/js/bootstrap.bundle.min.js"></script>
+        <script src="../assets/js/bootstrap.bundle.min.js"></script>
         <!--<< Nice Select Js >>-->
-        <script src="../../assets/js/jquery.nice-select.min.js"></script>
+        <script src="../assets/js/jquery.nice-select.min.js"></script>
         <!--<< Waypoints Js >>-->
         <script src="../../assets/js/jquery.waypoints.js"></script>
         <!--<< Counterup Js >>-->
-        <script src="../../assets/js/jquery.counterup.min.js"></script>
+        <script src="../assets/js/jquery.counterup.min.js"></script>
         <!--<< Swiper Slider Js >>-->
-        <script src="../../assets/js/swiper-bundle.min.js"></script>
+        <script src="../assets/js/swiper-bundle.min.js"></script>
         <!--<< MeanMenu Js >>-->
-        <script src="../../assets/js/jquery.meanmenu.min.js"></script>
+        <script src="../assets/js/jquery.meanmenu.min.js"></script>
         <!--<< Magnific Popup Js >>-->
-        <script src="../../assets/js/jquery.magnific-popup.min.js"></script>
+        <script src="../assets/js/jquery.magnific-popup.min.js"></script>
         <!--<< Wow Animation Js >>-->
-        <script src="../../assets/js/wow.min.js"></script>
+        <script src="../assets/js/wow.min.js"></script>
         <!--<< Circle Progress Js >>-->
-        <script src="../../assets/js/circle-progress.js"></script>
+        <script src="../assets/js/circle-progress.js"></script>
         <!--<< Main.js >>-->
-        <script src="../../assets/js/main.js"></script>
+        <script src="../assets/js/main.js"></script>
     </body>
 </html>
