--- a/case/case-1.html
+++ b/case/case-1.html
@@ -231,10 +231,10 @@
         <!-- Breadcrumb Section Start -->
         <div class="breadcrumb-wrapper bg-cover" style="background-image: url('../assets/img/breadcrumb.jpg');">
             <div class="left-shape">
-                <img src="../../assets/img/breadcrumb-shape.png" alt="img">
+                <img src="../assets/img/breadcrumb-shape.png" alt="img">
             </div>
             <div class="right-shape">
-                <img src="../../assets/img/breadcrumb-shape-2.png" alt="img">
+                <img src="../assets/img/breadcrumb-shape-2.png" alt="img">
             </div>
             <div class="container">
                 <div class="page-heading">
