--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                             </h2>
                             <p>Team Members</p>
                         </div>
-                        <a href="about.html" class="circle-button">
+                        <a href="service.html" class="circle-button">
                             <i class="fa-regular fa-arrow-up-right"></i>
                             <span class="text-circle">
                                 <img src="assets/img/text-circlw.png" alt="">
@@ -631,7 +631,7 @@
                                 <div class="gap-shape float-bob-x">
                                     <img src="assets/img/about/grap-2.png" alt="img">
                                 </div>
-                                <a href="about.html" class="circle-button">
+                                <a href="service.html" class="circle-button">
                                     <i class="fa-regular fa-arrow-up-right"></i>
                                     <span class="text-circle">
                                         <img src="assets/img/about/white-text.png" alt="img">
@@ -674,7 +674,7 @@
                                 </div>
                                 <div class="about-button">
                                     <div class="main-button wow fadeInUp" data-wow-delay=".3s">
-                                        <a href="about.html"> <span class="theme-btn">Explore More</span><span class="arrow-btn"><i class="fa-regular fa-arrow-up-right"></i></span></a>
+                                        <a href="contact.html"> <span class="theme-btn"> Get started </span><span class="arrow-btn"><i class="fa-regular fa-arrow-up-right"></i></span></a>
                                     </div>
                                     <!-- <a href="about.html" class="link-btn wow fadeInUp" data-wow-delay=".5s">EXPLORE MORE</a> -->
                                 </div>
@@ -700,7 +700,7 @@
                             <div class="faq-content">
                                 <div class="section-title">
                                     <div class="sub-title bg-color-2 wow fadeInUp">
-                                        <span>FAQ's</span>
+                                        <span>FAQ'</span><span style="text-transform: lowercase;">s</span>
                                     </div>
                                     <h2 class="wow fadeInUp" data-wow-delay=".3s">
                                         What's on your mind
@@ -804,7 +804,7 @@
                             <div class="testimonial-content">
                                 <div class="section-title">
                                     <div class="sub-title bg-color-2 wow fadeInUp">
-                                        <span>TESTIMONILAS</span>
+                                        <span>TESTIMONIALS</span>
                                     </div>
                                     <h2 class="wow fadeInUp" data-wow-delay=".3s">
                                         Happy Clients Says?
@@ -816,7 +816,7 @@
                                             <div class="testimonial-card-items">
                                                 <div class="client-info">
                                                     <div class="client-img">
-                                                        <img src="assets/img/testimonial/04.png" alt="img">
+                                                        <img src="assets/img/testimonial/p.png" alt="img">
                                                     </div>
                                                     <div class="client-content">
                                                         <h5>Pantheonlegacy</h5>
@@ -835,7 +835,7 @@
                                             <div class="testimonial-card-items">
                                                 <div class="client-info">
                                                     <div class="client-img">
-                                                        <img src="assets/img/testimonial/04.png" alt="img">
+                                                        <img src="assets/img/testimonial/n.png" alt="img">
                                                     </div>
                                                     <div class="client-content">
                                                         <h5>nayely433</h5>
@@ -854,7 +854,7 @@
                                             <div class="testimonial-card-items">
                                                 <div class="client-info">
                                                     <div class="client-img">
-                                                        <img src="assets/img/testimonial/04.png" alt="img">
+                                                        <img src="assets/img/testimonial/t.png" alt="img">
                                                     </div>
                                                     <div class="client-content">
                                                         <h5>Triplespark</h5>
@@ -873,7 +873,7 @@
                                             <div class="testimonial-card-items">
                                                 <div class="client-info">
                                                     <div class="client-img">
-                                                        <img src="assets/img/testimonial/04.png" alt="img">
+                                                        <img src="assets/img/testimonial/p.png" alt="img">
                                                     </div>
                                                     <div class="client-content">
                                                         <h5>Pjason</h5>
@@ -892,7 +892,7 @@
                                             <div class="testimonial-card-items">
                                                 <div class="client-info">
                                                     <div class="client-img">
-                                                        <img src="assets/img/testimonial/04.png" alt="img">
+                                                        <img src="assets/img/testimonial/a.png" alt="img">
                                                     </div>
                                                     <div class="client-content">
                                                         <h5>agency270</h5>
@@ -911,26 +911,7 @@
                                             <div class="testimonial-card-items">
                                                 <div class="client-info">
                                                     <div class="client-img">
-                                                        <img src="assets/img/testimonial/04.png" alt="img">
-                                                    </div>
-                                                    <div class="client-content">
-                                                        <h5>agency270</h5>
-                                                        <span> <img src="assets/img/testimonial/us.png" alt="United States"> United States</span>
-                                                    </div>
-                                                </div>
-                                                <p>
-                                                    Mizanur Rahman truly IMPRESSED in every aspect of our website development project! His professionalism and incredible attention to detail exceeded my expectations, and he consistently went above and beyond with quick responsiveness and outstanding cooperation. I couldn't be happier with his work—HIGHLY RECOMMEND! 😊
-                                                </p>
-                                                <div class="icon">
-                                                    <img src="assets/img/testimonial/icon.png" alt="img">
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="swiper-slide">
-                                            <div class="testimonial-card-items">
-                                                <div class="client-info">
-                                                    <div class="client-img">
-                                                        <img src="assets/img/testimonial/04.png" alt="img">
+                                                        <img src="assets/img/testimonial/d.png" alt="img">
                                                     </div>
                                                     <div class="client-content">
                                                         <h5>dineshchand24</h5>
@@ -969,7 +950,7 @@
                         <span>BLOG & NEWS</span>
                     </div>
                     <h2 class="wow fadeInUp" data-wow-delay=".3s">
-                        Use SEO to Drive Growth <br> at Your Business
+                        Stay ahead with insights, tutorials,<br> and top lists curated by professionals.
                     </h2>
                 </div>
             </div>
