--- a/service.html
+++ b/service.html
@@ -348,7 +348,7 @@
         </section>
 
         <!-- Cta Section Start -->
-        <section class="cta-section style-2 section-padding pb-0">
+        <section class="cta-section section-padding pb-0">
             <div class="rokect-shape float-bob-y">
                 <img src="assets/img/rokect.png" alt="img">
             </div>
@@ -358,10 +358,10 @@
                         <img src="assets/img/cta-img.png" alt="img">
                     </div>
                     <h2 class="wow fadeInUp" data-wow-delay=".3s">
-                        Stay Connected With <br> Cutting Edge IT
+                        Stay Connected With <br> Worshipbd
                     </h2>
                     <div class="main-button wow fadeInUp" data-wow-delay=".5s">
-                        <a href="contact.html"> <span class="theme-btn"> talk TO  A SPECIALIST </span><span class="arrow-btn"><i class="fa-regular fa-arrow-up-right"></i></span></a>
+                        <a href="contact.html"> <span class="theme-btn">Get Started</span><span class="arrow-btn"><i class="fa-regular fa-arrow-up-right"></i></span></a>
                     </div>
                 </div>
             </div>
