--- a/case/case-4.html
+++ b/case/case-4.html
@@ -420,10 +420,10 @@
                         <img src="../assets/img/cta-img.png" alt="img">
                     </div>
                     <h2 class="wow fadeInUp" data-wow-delay=".3s">
-                        Stay Connected With <br> Cutting Edge IT
+                        Stay Connected With <br> Worshipbd
                     </h2>
                     <div class="main-button wow fadeInUp" data-wow-delay=".5s">
-                        <a href="../contact.html"> <span class="theme-btn"> talk TO  A SPECIALIST </span><span class="arrow-btn"><i class="fa-regular fa-arrow-up-right"></i></span></a>
+                        <a href="../contact.html"> <span class="theme-btn"> Get Started </span><span class="arrow-btn"><i class="fa-regular fa-arrow-up-right"></i></span></a>
                     </div>
                 </div>
             </div>
