--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -267,7 +267,7 @@
             </div>
         </div>
 
-        <!-- Privacy policy start  -->
+        <!-- terms and conditions start  -->
         <section class="section-padding fix">
             <div class="container">
                 <div class="row">
@@ -368,8 +368,9 @@
                 </div>
             </div>
         </section>
+
         <!-- Cta Section Start -->
-        <section class="cta-section style-2 section-padding pb-0">
+        <section class="cta-section section-padding pb-0">
             <div class="rokect-shape float-bob-y">
                 <img src="assets/img/rokect.png" alt="img">
             </div>
@@ -379,10 +380,10 @@
                         <img src="assets/img/cta-img.png" alt="img">
                     </div>
                     <h2 class="wow fadeInUp" data-wow-delay=".3s">
-                        Stay Connected With <br> Cutting Edge IT
+                        Stay Connected With <br> Worshipbd
                     </h2>
                     <div class="main-button wow fadeInUp" data-wow-delay=".5s">
-                        <a href="contact.html"> <span class="theme-btn"> talk TO  A SPECIALIST </span><span class="arrow-btn"><i class="fa-regular fa-arrow-up-right"></i></span></a>
+                        <a href="contact.html"> <span class="theme-btn">Get Started</span><span class="arrow-btn"><i class="fa-regular fa-arrow-up-right"></i></span></a>
                     </div>
                 </div>
             </div>
