about us page video and video banner will change

--- a/about.html
+++ b/about.html
@@ -375,7 +375,7 @@
                                 <div class="gap-shape float-bob-x">
                                     <img src="assets/img/about/grap-2.png" alt="img">
                                 </div>
-                                <a href="about.html" class="circle-button">
+                                <a href="service.html" class="circle-button">
                                     <i class="fa-regular fa-arrow-up-right"></i>
                                     <span class="text-circle">
                                         <img src="assets/img/about/white-text.png" alt="img">
@@ -926,13 +926,13 @@
                         <div class="counter-box-area">
                             <div class="counter-text wow fadeInUp" data-wow-delay=".3s">
                                 <h2>
-                                    <span class="count">1500 </span>+
+                                    <span class="count">4000 </span>+
                                 </h2>
                                 <p>Projects Done</p>
                             </div>
                             <div class="counter-text wow fadeInUp" data-wow-delay=".5s">
                                 <h2>
-                                    <span class="count">1000 </span>+
+                                    <span class="count">2500 </span>+
                                 </h2>
                                 <p>active Clients</p>
                             </div>
@@ -945,8 +945,8 @@
                         </div>
                     </div>
                     <div class="cta-video-image wow img-custom-anim-left" data-wow-duration="1.5s" data-wow-delay="0.3s">
-                        <img src="assets/img/cta-video.jpg" alt="img">
-                        <a href="https://youtu.be/bvASCFRMSgM" class="video-icon video-popup">
+                        <img src="assets/img/cta-bg.PNG" alt="img">
+                        <a href="assets/media/worshipbd.mp4" class="video-icon video-popup">
                              <i class="fa-solid fa-play"></i>
                         </a>
                     </div>
