service section will rearrange home page and service page

--- a/service.html
+++ b/service.html
@@ -274,11 +274,11 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".3s">
                         <div class="service-box-items mt-0">
                             <div class="icon">
-                                <img src="assets/img/service/icon-1.png" alt="img">
+                                <img src="assets/img/service/icon-01.png" alt="img">
                             </div>
                             <div class="content"> 
-                                <h4><a href="services/logo-design.html">Logo Design</a></h4>
-                                <p>Crafting unique and memorable logos that define your brand identity.</p>
+                                <h4><a href="services/logo-design.html">Web Design & development</a></h4>
+                                <p>Custom websites built for performance and creativity.</p>
                                 <a href="services/logo-design.html" class="link-btn">Read More <i class="fa-regular fa-arrow-right-long"></i></a>
                             </div>
                         </div>
@@ -286,11 +286,11 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".5s">
                         <div class="service-box-items mt-0">
                             <div class="icon">
-                                <img src="assets/img/service/icon-2.png" alt="img">
+                                <img src="assets/img/service/icon-3.png" alt="img">
                             </div>
                             <div class="content"> 
                                 <h4><a href="services/graphics-design.html">Graphics Design</a></h4>
-                                <p>Creative and engaging designs for web, print, and digital media.</p>
+                                <p>Engaging visuals for web, print, and branding.</p>
                                 <a href="services/graphics-design.html" class="link-btn">Read More <i class="fa-regular fa-arrow-right-long"></i></a>
                             </div>
                         </div>
@@ -298,11 +298,11 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".7s">
                         <div class="service-box-items mt-0">
                             <div class="icon">
-                                <img src="assets/img/service/icon-3.png" alt="img">
+                                <img src="assets/img/service/icon-1.png" alt="img">
                             </div>
                             <div class="content"> 
-                                <h4><a href="services/web-development.html">Web Development</a></h4>
-                                <p>Responsive and modern websites tailored for performance and UX.</p>
+                                <h4><a href="services/web-development.html">Digital Marketing</a></h4>
+                                <p>Boost traffic and sales with smart strategies.</p>
                                 <a href="services/web-development.html" class="link-btn">Read More <i class="fa-regular fa-arrow-right-long"></i></a>
                             </div>
                         </div>
@@ -310,11 +310,11 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".3s">
                         <div class="service-box-items mt-0">
                             <div class="icon">
-                                <img src="assets/img/service/icon-4.png" alt="img">
+                                <img src="assets/img/service/icon-2.png" alt="img">
                             </div>
                             <div class="content"> 
-                                <h4><a href="services/website-maintenance.html">Website Maintenance</a></h4>
-                                <p>Regular updates, backups, and fixes to keep your site running smoothly.</p>
+                                <h4><a href="services/website-maintenance.html">Search Engine Optimization</a></h4>
+                                <p>Rank higher and grow with expert SEO.</p>
                                 <a href="services/website-maintenance.html" class="link-btn">Read More <i class="fa-regular fa-arrow-right-long"></i></a>
                             </div>
                         </div>
@@ -325,8 +325,8 @@
                                 <img src="assets/img/service/icon-5.png" alt="img">
                             </div>
                             <div class="content"> 
-                                <h4><a href="services/social-media-marketing.html">Social Media Marketing</a></h4>
-                                <p>Boost your brand presence and audience engagement across platforms.</p>
+                                <h4><a href="services/social-media-marketing.html">Video Editing</a></h4>
+                                <p>Captivating videos to elevate your brand online.</p>
                                 <a href="services/social-media-marketing.html" class="link-btn">Read More <i class="fa-regular fa-arrow-right-long"></i></a>
                             </div>
                         </div>
@@ -337,8 +337,8 @@
                                 <img src="assets/img/service/icon-6.png" alt="img">
                             </div>
                             <div class="content"> 
-                                <h4><a href="services/seo.html">Search Engine Optimization (SEO)</a></h4>
-                                <p>Improve your search rankings and drive organic traffic to your site.</p>
+                                <h4><a href="services/seo.html">Data Entry</a></h4>
+                                <p>Accurate data handling for smooth digital operations.</p>
                                 <a href="services/seo.html" class="link-btn">Read More <i class="fa-regular fa-arrow-right-long"></i></a>
                             </div>
                         </div>
