new service page rename and service section link correction

--- a/index.html
+++ b/index.html
@@ -497,9 +497,9 @@
                                 <img src="assets/img/service/icon-01.png" alt="img">
                             </div>
                             <div class="content"> 
-                                <h4><a href="services/logo-design.html">Web Design & development</a></h4>
+                                <h4><a href="services/web-development.html">Web Design & development</a></h4>
                                 <p>Custom websites built for performance and creativity.</p>
-                                <a href="services/logo-design.html" class="link-btn">Read More <i class="fa-regular fa-arrow-right-long"></i></a>
+                                <a href="services/web-development.html" class="link-btn">Read More <i class="fa-regular fa-arrow-right-long"></i></a>
                             </div>
                         </div>
                     </div>
@@ -521,9 +521,9 @@
                                 <img src="assets/img/service/icon-1.png" alt="img">
                             </div>
                             <div class="content"> 
-                                <h4><a href="services/web-development.html">Digital Marketing</a></h4>
+                                <h4><a href="services/social-media-marketing.html">Digital Marketing</a></h4>
                                 <p>Boost traffic and sales with smart strategies.</p>
-                                <a href="services/web-development.html" class="link-btn">Read More <i class="fa-regular fa-arrow-right-long"></i></a>
+                                <a href="services/social-media-marketing.html" class="link-btn">Read More <i class="fa-regular fa-arrow-right-long"></i></a>
                             </div>
                         </div>
                     </div>
@@ -533,9 +533,9 @@
                                 <img src="assets/img/service/icon-2.png" alt="img">
                             </div>
                             <div class="content"> 
-                                <h4><a href="services/website-maintenance.html">Search Engine Optimization</a></h4>
+                                <h4><a href="services/seo.html">Search Engine Optimization</a></h4>
                                 <p>Rank higher and grow with expert SEO.</p>
-                                <a href="services/website-maintenance.html" class="link-btn">Read More <i class="fa-regular fa-arrow-right-long"></i></a>
+                                <a href="services/seo.html" class="link-btn">Read More <i class="fa-regular fa-arrow-right-long"></i></a>
                             </div>
                         </div>
                     </div>
@@ -545,9 +545,9 @@
                                 <img src="assets/img/service/icon-5.png" alt="img">
                             </div>
                             <div class="content"> 
-                                <h4><a href="services/social-media-marketing.html">Video Editing</a></h4>
+                                <h4><a href="services/video-editing.html">Video Editing</a></h4>
                                 <p>Captivating videos to elevate your brand online.</p>
-                                <a href="services/social-media-marketing.html" class="link-btn">Read More <i class="fa-regular fa-arrow-right-long"></i></a>
+                                <a href="services/video-editing.html" class="link-btn">Read More <i class="fa-regular fa-arrow-right-long"></i></a>
                             </div>
                         </div>
                     </div>
@@ -557,9 +557,9 @@
                                 <img src="assets/img/service/icon-6.png" alt="img">
                             </div>
                             <div class="content"> 
-                                <h4><a href="services/seo.html">Data Entry</a></h4>
+                                <h4><a href="services/data-entry.html">Data Entry</a></h4>
                                 <p>Accurate data handling for smooth digital operations.</p>
-                                <a href="services/seo.html" class="link-btn">Read More <i class="fa-regular fa-arrow-right-long"></i></a>
+                                <a href="services/data-entry.html" class="link-btn">Read More <i class="fa-regular fa-arrow-right-long"></i></a>
                             </div>
                         </div>
                     </div>
