all service page correction is done now

--- a/services/graphics-design.html
+++ b/services/graphics-design.html
@@ -296,12 +296,12 @@
                                     </div>
                                     <div class="service-widget-categories">
                                         <ul>
-                                            <li><a href="../services/web-development.html">Web Development</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
-                                            <li  class="active"><a href="../services/graphics-design.html">Graphics Design</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
-                                            <li><a href="../services/logo-design.html">Logo Design</a><span><i class="fa-regular fa-arrow-right-long"></i></span></li>
-                                            <li><a href="../services/website-maintenance.html">Website Maintenance</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
-                                            <li><a href="../services/social-media-marketing.html">Social Media Marketing</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            <li class="active"><a href="../services/web-development.html">Web Design & Development</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            <li><a href="../services/graphics-design.html">Graphics Design</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            <li><a href="../services/social-media-marketing.html">Digital Marketing </a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
                                             <li><a href="../services/seo.html">Search Engine Optimization (SEO)</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            <li><a href="../services/video-editing.html">Video Editing</a><span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            <li><a href="../services/data-entry.html">Data Entry</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -313,7 +313,7 @@
                                     Graphics Design
                                 </h3>
                                 <p class="mb-4">
-                                    At Digtek, we believe great design is more than just aesthetics—it's about communication, emotion, and experience. Our Graphic Design services turn ideas into compelling visuals that capture attention, build trust, and elevate your brand.
+                                    At Worshipbd, we believe great design is more than just aesthetics—it's about communication, emotion, and experience. Our Graphic Design services turn ideas into compelling visuals that capture attention, build trust, and elevate your brand.
                                 </p>
                                 <p class="mb-4">
                                     From eye-catching social media creatives to polished corporate branding, we design with strategy and intention. Every color, font, and element is chosen to reflect your brand’s voice and resonate with your audience.
@@ -342,11 +342,11 @@
                                     </ul>
                                     We mix creativity with clarity—ensuring every design delivers your message with power and precision.
                                 </p>
-                                <div class="thumb">
-                                    <img src="../assets/img/service/details-2.jpg" alt="img">
+                                <div class="thumb pt-3">
+                                    <img src="../assets/img/service/grapics.jpg" alt="img">
                                 </div>
                                 <h3>
-                                    The Challange
+                                    The Challenges
                                 </h3>
                                 <p>
                                     Design is about more than making things look good—it’s about solving problems visually. Common challenges businesses face include:
