--- a/services/seo.html
+++ b/services/seo.html
@@ -296,12 +296,13 @@
                                     </div>
                                     <div class="service-widget-categories">
                                         <ul>
-                                            <li><a href="../services/web-development.html">Web Development</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            <li class="active"><a href="../services/web-development.html">Web Design & Development</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
                                             <li><a href="../services/graphics-design.html">Graphics Design</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
-                                            <li><a href="../services/logo-design.html">Logo Design</a><span><i class="fa-regular fa-arrow-right-long"></i></span></li>
-                                            <li><a href="../services/website-maintenance.html">Website Maintenance</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
-                                            <li><a href="../services/social-media-marketing.html">Social Media Marketing</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
-                                            <li  class="active"><a href="../services/seo.html">Search Engine Optimization (SEO)</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            <li><a href="../services/social-media-marketing.html">Digital Marketing </a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            <li><a href="../services/seo.html">Search Engine Optimization (SEO)</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            <li><a href="../services/video-editing.html">Video Editing</a><span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            <li><a href="../services/data-entry.html">Data Entry</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            
                                         </ul>
                                     </div>
                                 </div>
@@ -313,7 +314,7 @@
                                     Search Engine Optimization (SEO)
                                 </h3>
                                 <p class="mb-4">
-                                    In today's digital landscape, visibility is everything. At Digtek, our Search Engine Optimization (SEO) services are designed to help your business rank higher, attract quality traffic, and turn visitors into loyal customers.
+                                    In today's digital landscape, visibility is everything. At Worshipbd, our Search Engine Optimization (SEO) services are designed to help your business rank higher, attract quality traffic, and turn visitors into loyal customers.
                                 </p>
                                 <p class="mb-4">
                                     We don’t just chase rankings—we focus on sustainable, long-term growth through ethical SEO practices, comprehensive keyword research, and data-driven strategies that align with your business objectives.
@@ -344,11 +345,11 @@
                                         We help you stand out in crowded search results and dominate your niche with precision and performance.
                                     </p>
                                 </p>
-                                <div class="thumb">
-                                    <img src="../assets/img/service/details-2.jpg" alt="img">
+                                <div class="thumb pt-3">
+                                    <img src="../assets/img/service/seo.jpg" alt="img">
                                 </div>
                                 <h3>
-                                    The Challange
+                                    The Challenges
                                 </h3>
                                 <p>
                                     SEO is not a one-time effort—it’s a dynamic, ever-evolving challenge. Businesses often struggle with:
