--- a/services/social-media-marketing.html
+++ b/services/social-media-marketing.html
@@ -249,7 +249,7 @@
             <div class="container">
                 <div class="page-heading">
                     <div class="breadcrumb-sub-title">
-                        <h1 class="wow fadeInUp" data-wow-delay=".3s">Social Media Marketing</h1>
+                        <h1 class="wow fadeInUp" data-wow-delay=".3s">Digital Marketing</h1>
                     </div>
                     <ul class="breadcrumb-items wow fadeInUp" data-wow-delay=".5s">
                         <li>
@@ -269,7 +269,7 @@
                             <i class="fa-solid fa-chevron-right"></i>
                         </li>
                         <li>
-                            Social Media Marketing
+                            Digital Marketing
                         </li>
                     </ul>
                 </div>
@@ -296,12 +296,12 @@
                                     </div>
                                     <div class="service-widget-categories">
                                         <ul>
-                                            <li><a href="../services/web-development.html">Web Development</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            <li class="active"><a href="../services/web-development.html">Web Design & Development</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
                                             <li><a href="../services/graphics-design.html">Graphics Design</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
-                                            <li><a href="../services/logo-design.html">Logo Design</a><span><i class="fa-regular fa-arrow-right-long"></i></span></li>
-                                            <li><a href="../services/website-maintenance.html">Website Maintenance</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
-                                            <li class="active"><a href="../services/social-media-marketing.html">Social Media Marketing</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            <li><a href="../services/social-media-marketing.html">Digital Marketing </a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
                                             <li><a href="../services/seo.html">Search Engine Optimization (SEO)</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            <li><a href="../services/video-editing.html">Video Editing</a><span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            <li><a href="../services/data-entry.html">Data Entry</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -313,7 +313,7 @@
                                     Social Media Marketing
                                 </h3>
                                 <p class="mb-4">
-                                    In a digital world driven by conversations and content, Social Media Marketing is no longer optional—it's essential. At Digtek, we help brands connect, engage, and grow through powerful, strategic, and data-backed social media campaigns.
+                                    In a digital world driven by conversations and content, Social Media Marketing is no longer optional—it's essential. At Worshipbd, we help brands connect, engage, and grow through powerful, strategic, and data-backed social media campaigns.
                                 </p>
                                 <p class="mb-4">
                                     From content creation to paid advertising and community management, we turn your social platforms into revenue-generating assets that build awareness, trust, and loyalty.
@@ -347,11 +347,11 @@
                                         We don't just grow your following—we build meaningful connections that drive business growth.
                                     </p>
                                 </p>
-                                <div class="thumb">
-                                    <img src="../assets/img/service/details-2.jpg" alt="img">
+                                <div class="thumb pt-3">
+                                    <img src="../assets/img/service/digital.jpg" alt="img">
                                 </div>
                                 <h3>
-                                    The Challange
+                                    The Challenges
                                 </h3>
                                 <p> Succeeding on social media means more than just posting daily. Brands often struggle with:
                                 </p>
