--- a/services/web-development.html
+++ b/services/web-development.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- ======== Page title ============ -->
-        <title>Web Development - WORSHIPBD</title>
+        <title>Web Design & Development - WORSHIPBD</title>
         <!--<< Favcion >>-->
         <link rel="shortcut icon" href="../assets/img/favicon.png">
         <!--<< Bootstrap min.css >>-->
@@ -249,7 +249,7 @@
             <div class="container">
                 <div class="page-heading">
                     <div class="breadcrumb-sub-title">
-                        <h1 class="wow fadeInUp" data-wow-delay=".3s">Web Development</h1>
+                        <h1 class="wow fadeInUp" data-wow-delay=".3s">Web Design & Development</h1>
                     </div>
                     <ul class="breadcrumb-items wow fadeInUp" data-wow-delay=".5s">
                         <li>
@@ -269,7 +269,7 @@
                             <i class="fa-solid fa-chevron-right"></i>
                         </li>
                         <li>
-                            Web Development
+                            Web Design & Development
                         </li>
                     </ul>
                 </div>
@@ -296,12 +296,13 @@
                                     </div>
                                     <div class="service-widget-categories">
                                         <ul>
-                                            <li class="active"><a href="../services/web-development.html">Web Development</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            <li class="active"><a href="../services/web-development.html">Web Design & Development</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
                                             <li><a href="../services/graphics-design.html">Graphics Design</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
-                                            <li><a href="../services/logo-design.html">Logo Design</a><span><i class="fa-regular fa-arrow-right-long"></i></span></li>
-                                            <li><a href="../services/website-maintenance.html">Website Maintenance</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
-                                            <li><a href="../services/social-media-marketing.html">Social Media Marketing</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            <li><a href="../services/social-media-marketing.html">Digital Marketing </a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
                                             <li><a href="../services/seo.html">Search Engine Optimization (SEO)</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            <li><a href="../services/video-editing.html">Video Editing</a><span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            <li><a href="../services/data-entry.html">Data Entry</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            
                                         </ul>
                                     </div>
                                 </div>
@@ -310,10 +311,10 @@
                         <div class="col-12 col-lg-8">
                             <div class="service-details-content">
                                 <h3>
-                                    Web Development
+                                    Web Design & Development
                                 </h3>
                                 <p class="mb-4">
-                                    At Digtek, we specialize in crafting seamless, scalable, and high-performing web solutions tailored to your business needs. Whether you're a startup seeking a digital foundation or an enterprise looking to revamp your web infrastructure, our web development services are built to drive results.
+                                    At Worshipbd, we specialize in crafting seamless, scalable, and high-performing web solutions tailored to your business needs. Whether you're a startup seeking a digital foundation or an enterprise looking to revamp your web infrastructure, our web development services are built to drive results.
                                 </p>
                                 <p class="mb-4">
                                     Our experienced team leverages cutting-edge technologies to build websites that are not only visually stunning but also optimized for performance, security, and user experience. From responsive design to robust backend systems, we ensure your online presence sets the benchmark in your industry.
@@ -342,11 +343,11 @@
                                     </ul>
                                     Every line of code is written with precision and purpose, ensuring your site is fast, secure, and scalable.
                                 </p>
-                                <div class="thumb">
-                                    <img src="../assets/img/service/details-2.jpg" alt="img">
+                                <div class="thumb pt-3">
+                                    <img src="../assets/img/service/web.jpg" alt="img">
                                 </div>
                                 <h3>
-                                    The Challange
+                                    The Challenges
                                 </h3>
                                 <p>
                                     Developing a website that balances performance, aesthetics, and usability is a multi-layered challenge. Businesses often face:
