service sub menu will rearrange

--- a/about.html
+++ b/about.html
@@ -289,16 +289,16 @@
                                             <a href="service.html">Services</a>
                                             <!-- sub menu  -->
                                             <ul class="submenu">
-                                                <li><a href="services/web-development.html">Web Development</a></li>
+                                                <li><a href="services/web-development.html">Web Design & Development</a></li>
                                                 <li><a href="services/graphics-design.html">Graphics Design</a></li>
-                                                <li><a href="services/logo-design.html">Logo Design</a></li>
-                                                <li><a href="services/website-maintenance.html">Website Maintenance</a></li>
-                                                <li><a href="services/social-media-marketing.html">Social Media Marketing</a></li>
+                                                <li><a href="services/social-media-marketing.html">Digital Marketing</a></li>
                                                 <li><a href="services/seo.html">SEO</a></li>
+                                                <li><a href="services/video-editing.html">Video Editing</a></li>
+                                                <li><a href="services/data-entry.html">Data Entry</a></li>
                                             </ul>
                                         </li>
                                         <li>
-                                            <a href="case.html">Case </a>
+                                            <a href="case.html">Case Studies</a>
                                         </li>
                                        <li>
                                             <a href="blog.html">Blog</a>
