all the social media icon open in new windows

--- a/case/case-2.html
+++ b/case/case-2.html
@@ -451,11 +451,11 @@
                                         We are passionate digital creators committed to crafting beautiful, functional, and high-performing websites that drive results.
                                     </p>
                                     <div class="social-icon d-flex align-items-center">
-                                        <a href="https://www.facebook.com/worshipbd19"><i class="fab fa-facebook-f"></i></a>
-                                        <a href="https://www.linkedin.com/in/worship-bd/"><i class="fab fa-linkedin-in"></i></a>
-                                        <a href="https://x.com/worship_bd"><i class="fa-brands fa-twitter"></i></a>
-                                        <a href="https://www.instagram.com/worship_BD"><i class="fa-brands fa-instagram"></i></a>
-                                        <a href="https://www.behance.net/worshipbd"><i class="fa-brands fa-behance"></i></a>
+                                        <a href="https://www.facebook.com/worshipbd19" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                                        <a href="https://www.linkedin.com/in/worship-bd/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                                        <a href="https://x.com/worship_bd" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                                        <a href="https://www.instagram.com/worship_BD" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                                        <a href="https://www.behance.net/worshipbd" target="_blank"><i class="fa-brands fa-behance"></i></a>
                                     </div>
                                 </div>
                             </div>
