--- a/case/case-4.html
+++ b/case/case-4.html
@@ -180,7 +180,7 @@
                 <div class="mega-menu-wrapper">
                     <div class="header-main">
                         <div class="logo">
-                            <a href="index.html" class="header-logo-3">
+                            <a href="../index.html" class="header-logo-3">
                                 <img src="../assets/img/logo/Worshipbd-Logo.png" alt="Worshipbd-Logo">
                             </a>
                         </div>
@@ -199,6 +199,15 @@
                                         </li>
                                         <li>
                                             <a href="../service.html">Services</a>
+                                            <!-- sub menu  -->
+                                            <ul class="submenu">
+                                                <li><a href="../services/web-development.html">Web Design & Development</a></li>
+                                                <li><a href="../services/graphics-design.html">Graphics Design</a></li>
+                                                <li><a href="../services/social-media-marketing.html">Digital Marketing</a></li>
+                                                <li><a href="../services/seo.html">SEO</a></li>
+                                                <li><a href="../services/video-editing.html">Video Editing</a></li>
+                                                <li><a href="../services/data-entry.html">Data Entry</a></li>
+                                            </ul>
                                         </li>
                                         <li>
                                             <a href="../case.html">Case </a>
@@ -215,7 +224,7 @@
                         </div>
                         <div class="header-right d-flex justify-content-end align-items-center">
                             <div class="main-button">
-                                <a href="../contact.html"> <span class="theme-btn"> Get Started </span><span class="arrow-btn"><i class="fa-regular fa-arrow-up-right"></i></span></a>
+                                <a href="contact.html"> <span class="theme-btn"> Get Started </span><span class="arrow-btn"><i class="fa-regular fa-arrow-up-right"></i></span></a>
                             </div>
                             <div class="header__hamburger d-xl-none my-auto">
                                 <div class="sidebar__toggle">
