--- a/services/graphics-design.html
+++ b/services/graphics-design.html
@@ -202,12 +202,12 @@
                                             <a href="../service.html">Services</a>
                                             <!-- sub menu  -->
                                             <ul class="submenu">
-                                                <li><a href="../services/web-development.html">Web Development</a></li>
+                                                <li><a href="../services/web-development.html">Web Design & Development</a></li>
                                                 <li><a href="../services/graphics-design.html">Graphics Design</a></li>
-                                                <li><a href="../services/logo-design.html">Logo Design</a></li>
-                                                <li><a href="../services/website-maintenance.html">Website Maintenance</a></li>
-                                                <li><a href="../services/social-media-marketing.html">Social Media Marketing</a></li>
+                                                <li><a href="../services/social-media-marketing.html">Digital Marketing</a></li>
                                                 <li><a href="../services/seo.html">SEO</a></li>
+                                                <li><a href="../services/video-editing.html">Video Editing</a></li>
+                                                <li><a href="../services/data-entry.html">Data Entry</a></li>
                                             </ul>
                                         </li>
                                         <li>
@@ -296,8 +296,8 @@
                                     </div>
                                     <div class="service-widget-categories">
                                         <ul>
-                                            <li class="active"><a href="../services/web-development.html">Web Design & Development</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
-                                            <li><a href="../services/graphics-design.html">Graphics Design</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            <li><a href="../services/web-development.html">Web Design & Development</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
+                                            <li class="active"><a href="../services/graphics-design.html">Graphics Design</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
                                             <li><a href="../services/social-media-marketing.html">Digital Marketing </a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
                                             <li><a href="../services/seo.html">Search Engine Optimization (SEO)</a> <span><i class="fa-regular fa-arrow-right-long"></i></span></li>
                                             <li><a href="../services/video-editing.html">Video Editing</a><span><i class="fa-regular fa-arrow-right-long"></i></span></li>
